fix footer content align

--- a/src/components/FooterInfo/styles.module.scss
+++ b/src/components/FooterInfo/styles.module.scss
@@ -5,12 +5,8 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  text-align: center;
+  text-align: right;
   color: v.$inverted-text-color;
-
-  @include media('>=xs') {
-    text-align: right;
-  }
 }
 
 .contacts {
