--- a/src/layouts/MainLayout/styles.module.scss
+++ b/src/layouts/MainLayout/styles.module.scss
@@ -11,12 +11,13 @@
 
   .row {
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
 
     @include media('>=xs') {
       justify-content: space-between;
+      align-items: center;
     }
   }
 }
